[Server/Frontend] Completed user profile read/update.
