# server/src/main/kotlin/com/yawa/server/models/users/Language.kt
@@ -1,0 +1,25 @@
+package com.yawa.server.models.users
+
+enum class Language {
+    ARABIC,
+    CHINESE,
+    DUTCH,
+    ENGLISH,
+    FRENCH,
+    GERMAN,
+    HEBREW,
+    HINDI,
+    ITALIAN,
+    JAPANESE,
+    KOREAN,
+    NORWEGIAN,
+    POLISH,
+    PORTUGUESE,
+    RUSSIAN,
+    SPANISH,
+    SWEDISH,
+    THAI,
+    TURKISH,
+    UKRAINIAN,
+    VIETNAMESE
+}
